@@ -1,6 +1,7 @@
 Overview of changes in lightdm 0.2.3
 
     * Set correct linking library names in pkg-config files
+    * Handle session executables that take arguments
 
 Overview of changes in lightdm 0.2.2
 
